fix: avoid NPE in call-hierarchy mapping when processDefinitionName is null
A BPMN process deployed without a name attribute leaves
ProcessInstanceEntity.processDefinitionName() null. The call-hierarchy
mapper called String.isBlank() directly on that value, which crashed the
GET /v2/process-instances/{key}/call-hierarchy endpoint with a 500 and
broke the parent-process breadcrumb in Operate.

Switch to the null-safe Apache Commons StringUtils.isBlank so we still
fall back to processDefinitionId when the name is absent.

Closes #50011

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>